fixed some layout issues , made home UI

--- a/frontend/pages/part 1/index.html
+++ b/frontend/pages/part 1/index.html
@@ -17,8 +17,10 @@
             <div>
                 <input type="text" class="search-field" placeholder="Search The Market">
             </div>
-            <button class="sign-in"><i class="fa-regular fa-user"></i>Sign in</button>
+            <div class="header-buttons">
+                <button class="sign-in"><i class="fa-regular fa-user"></i>Sign in</button>
             <button class="cart-button"><i class="fa fa-cart-shopping"></i>Cart</button>
+            </div>
         </div>
           
         <hr class="divider">
@@ -32,78 +34,216 @@
         <hr class="divider">
     </div>
     <!-- MAIN CONTENT -->
-     <main>
-        <!-- Category section:-->
-        <h4>Category</h4>
-        <div class="selection">
-            <button class="category-btn active">Phones</button>
-            <button class="category-btn">Tablets</button>
-            <button class="category-btn">Laptops</button>
-            <button class="category-btn">Accessories</button>
-        </div>
-        <hr class="divider">
-        <!-- Brand Selection Section-->
-        <h4>Brand</h4>
-        <div class="selection">
-            <button class="brand-btn active">Apple</button>
-            <button class="brand-btn">Samsung</button>
-            <button class="brand-btn">Huawei</button>
-            <button class="brand-btn">Xiaomi</button>
-            <button class="brand-btn">Oppo</button>
-            <button class="brand-btn">Nokia</button>
-        </div>
-        <!-- Product Section -->
-        <hr class="divider">
 
-        <div class="products-grid">
-            <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
-                <p class="product-brand">Apple</p>
-                <label class="product-name">iPhone 16 pro max</label>
-                <label class="product-desc">Build For Apple Intelligence</label>
-                <hr class="card-divider">
-                <p class="product-instal-price">Starting At $30/month for 24 Months</p>
-                <p class="product-price">Full Price: $1,099.00</p>
+    <main>
+        <!-- HOME page:-->
+        <div id="home-ui" class="ui-section" style="display: none;">
+            <h4>Recent Products</h4>
+            <div class="products-grid">
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <!-- Add more product cards as needed -->
             </div>
-            <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
-                <p class="product-brand">Apple</p>
-                <label class="product-name">iPhone 16 pro max</label>
-                <label class="product-desc">Build For Apple Intelligence</label>
-                <hr class="card-divider">
-                <p class="product-instal-price">Starting At $30/month for 24 Months</p>
-                <p class="product-price">Full Price: $1,099.00</p>
-            </div>
-            <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
-                <p class="product-brand">Apple</p>
-                <label class="product-name">iPhone 16 pro max</label>
-                <label class="product-desc">Build For Apple Intelligence</label>
-                <hr class="card-divider">
-                <p class="product-instal-price">Starting At $30/month for 24 Months</p>
-                <p class="product-price">Full Price: $1,099.00</p>
-            </div>
-            <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
-                <p class="product-brand">Apple</p>
-                <label class="product-name">iPhone 16 pro max</label>
-                <label class="product-desc">Build For Apple Intelligence</label>
-                <hr class="card-divider">
-                <p class="product-instal-price">Starting At $30/month for 24 Months</p>
-                <p class="product-price">Full Price: $1,099.00</p>
-            </div>
-            <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
-                <p class="product-brand">Apple</p>
-                <label class="product-name">iPhone 16 pro max</label>
-                <label class="product-desc">Build For Apple Intelligence</label>
-                <hr class="card-divider">
-                <p class="product-instal-price">Starting At $30/month for 24 Months</p>
-                <p class="product-price">Full Price: $1,099.00</p>
-            </div>
-            <!-- Add more product cards as needed -->
         </div>
-     </main>
+
+        <div id="shop-ui" class="ui-section" style="display: block;">
+            <h4>Category</h4>
+            <div class="selection">
+                <button class="category-btn active">Phones</button>
+                <button class="category-btn">Tablets</button>
+                <button class="category-btn">Laptops</button>
+                <button class="category-btn">Accessories</button>
+            </div>
+            <hr class="divider">
+            <!-- Brand Selection Section-->
+            <h4>Brand</h4>
+            <div class="selection">
+                <button class="brand-btn active">Apple</button>
+                <button class="brand-btn">Samsung</button>
+                <button class="brand-btn">Huawei</button>
+                <button class="brand-btn">Xiaomi</button>
+                <button class="brand-btn">Oppo</button>
+                <button class="brand-btn">Nokia</button>
+            </div>
+            <!-- Product Section -->
+            <hr class="divider">
+
+            <div class="products-grid">
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <div class="product-card">
+                    <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                    <p class="product-brand">Apple</p>
+                    <label class="product-name">iPhone 16 pro max</label>
+                    <label class="product-desc">Build For Apple Intelligence</label>
+                    <hr class="card-divider">
+                    <p class="product-instal-price">Starting At $30/month for 24 Months</p>
+                    <p class="product-price">Full Price: $1,099.00</p>
+                </div>
+                <!-- Add more product cards as needed -->
+            </div>
+        </div>
+
+        <!-- CHECKOUT page:-->
+        <div id="checkout-ui" class="ui-section" style="display: none;">
+            <h1>Checkout</h1>
+        </div>
+    </main>
+
+    <!-- <div id="sidebar" class="cart-sidebar">
+        <button class="close-btn" id="closeSidebar">&times;</button>
+        <h3>Your Cart</h3>
+        <p>No items in the cart yet.</p>
+    </div>-->
 
     <footer>
         <p>&copy; 2025 ALSHOPDZ. All rights reserved.</p>
