--- a/frontend/pages/part 1/checkout.html
+++ b/frontend/pages/part 1/checkout.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>Checkout</title>
 </head>
 <body>
     <div class="head">
