--- a/frontend/pages/part 1/index.html
+++ b/frontend/pages/part 1/index.html
@@ -176,6 +176,6 @@
         <p>&copy; 2025 ALSHOPDZ. All rights reserved.</p>
     </footer>
 
-    <script src="../../scripts/app.js"></script>
+    <script src="../../scripts/index.js"></script>
 </body>
 </html>
