changed a center of product-head-img in product details

--- a/frontend/pages/part 1/product_details.html
+++ b/frontend/pages/part 1/product_details.html
@@ -8,6 +8,17 @@
     <title>ALSHOPDZ</title>
 </head>
 <body>
+    <!--<div class="header-content">
+        <img src="../../../icon-nobg.png" alt="ALSHOPDZ" class="icon">
+        <div>
+            <input type="text" class="search-field" placeholder="Search The Market">
+        </div>
+        <div class="header-buttons">
+            <button class="sign-in"><i class="fa-regular fa-user"></i>Sign in</button>
+        <button id="openSidebar" class="cart-button"><i class="fa fa-cart-shopping"></i>Cart</button>
+        </div>
+    </div>-->
+
     <div class="product-img-section">
         <div class="product-head">
             <h4 id="brand">Apple</h4>
@@ -16,7 +27,7 @@
         </div>
 
         <div class="image-swapper">
-            <i class="fa-solid fa-arrow-left"></i>
+            <i class="fa-solid fa-arrow-left" id="swap-left-btn"></i>
 
             <div class="img-holder">
                 <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="iPhone 16 pro max" title="iPhone 16 pro max">
@@ -28,7 +39,7 @@
                 </div>
             </div>
 
-            <i class="fa-solid fa-arrow-right"></i>
+            <i class="fa-solid fa-arrow-right" id="swap-right-btn"></i>
         </div>
     </div>
 
