fixed some layout/overflow issues with shop home and details , details css still in progress ( im lazy )

--- a/frontend/pages/part 1/checkout.html
+++ b/frontend/pages/part 1/checkout.html
@@ -12,7 +12,7 @@
 <body>
     <div class="head">
      <div class="logo">
-        <img src="../../../icon-nobg.png" alt="">
+        <img src="../../../icon-nobg.png" alt="ALSHOPDZ">
      </div>
      </div>
      <div class="component">
@@ -35,23 +35,23 @@
         </div>
         <div class="card-type">
          <div>
-            <img src="../../assets/download.png" alt="visa">
+            <img src="../../assets/images/download.png" alt="visa">
          </div>
          <div>
-            <img src="../../assets/mastercard.png" alt="mastercard">
+            <img src="../../assets/images/mastercard.png" alt="mastercard">
          </div>
          <div>
-            <img src="../../assets/webmony.png" alt="webmony">
+            <img src="../../assets/images/webmony.png" alt="webmony">
          </div>
          <div>
-            <img src="../../assets/payapal.png" alt="paypal">
+            <img src="../../assets/images/payapal.png" alt="paypal">
          </div>
         </div>
        </div>
        <div class="scrollable">
        <div class="product">
         <div class="img">
-            <img src="../../assets/iphone16.jfif" alt="iphone">
+            <img src="../../assets/images/iphone16.jfif" alt="iphone">
         </div>
         <div class="info-device">
         <h2>IPhone 16 pro max</h2>
@@ -71,7 +71,7 @@
        </div>
        <div class="product">
         <div class="img">
-            <img src="../../assets/iphone16.jfif" alt="iphone">
+            <img src="../../assets/images/iphone16.jfif" alt="iphone">
         </div>
         <div class="info-device">
         <h2>IPhone 16 pro max</h2>
@@ -91,7 +91,7 @@
        </div>
        <div class="product">
         <div class="img">
-            <img src="../../assets/iphone16.jfif" alt="iphone">
+            <img src="../../assets/images/iphone16.jfif" alt="iphone">
         </div>
         <div class="info-device">
         <h2>IPhone 16 pro max</h2>
