--- a/frontend/pages/part 1/index.html
+++ b/frontend/pages/part 1/index.html
@@ -14,12 +14,12 @@
         <!-- ALSHOPDZ ICON .. SEARCH FIELD .. SIGN IN .. CART-->
         <div class="header-content">
             <img src="../../../icon-nobg.png" alt="ALSHOPDZ" class="icon">
-            <div>
+            <div class="search-container">
                 <input type="text" class="search-field" placeholder="Search The Market">
             </div>
             <div class="header-buttons">
                 <button class="sign-in"><i class="fa-regular fa-user"></i>Sign in</button>
-            <button id="openSidebar" class="cart-button"><i class="fa fa-cart-shopping"></i>Cart</button>
+                <button id="openSidebar" class="cart-button"><i class="fa fa-cart-shopping"></i>Cart</button>
             </div>
         </div>
           
@@ -47,7 +47,7 @@
     
                 <div class="carted-products-col">
                     <div class="cart-item">
-                        <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="cart-image">
+                        <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="cart-image">
                         <div class="cart-item-details">
                             <label class="cart-item-name">Samsung Galaxy S25 Ultra</label>
                             <label class="cart-item-quant">$1,099.00 * 3</label>
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                     <div class="cart-item">
-                        <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="cart-image">
+                        <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="cart-image">
                         <div class="cart-item-details">
                             <label class="cart-item-name">Samsung Galaxy S25 Ultra</label>
                             <label class="cart-item-quant">$1,099.00 * 3</label>
@@ -79,7 +79,7 @@
         <h4>Recent Products</h4>
         <div class="products-grid">
             <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
                 <p class="product-brand">Apple</p>
                 <label class="product-name">iPhone 16 pro max</label>
                 <label class="product-desc">Build For Apple Intelligence</label>
@@ -88,7 +88,7 @@
                 <p class="product-price">Full Price: $1,099.00</p>
             </div>
             <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
                 <p class="product-brand">Apple</p>
                 <label class="product-name">iPhone 16 pro max</label>
                 <label class="product-desc">Build For Apple Intelligence</label>
@@ -97,7 +97,7 @@
                 <p class="product-price">Full Price: $1,099.00</p>
             </div>
             <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
                 <p class="product-brand">Apple</p>
                 <label class="product-name">iPhone 16 pro max</label>
                 <label class="product-desc">Build For Apple Intelligence</label>
@@ -106,7 +106,7 @@
                 <p class="product-price">Full Price: $1,099.00</p>
             </div>
             <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
                 <p class="product-brand">Apple</p>
                 <label class="product-name">iPhone 16 pro max</label>
                 <label class="product-desc">Build For Apple Intelligence</label>
@@ -115,7 +115,7 @@
                 <p class="product-price">Full Price: $1,099.00</p>
             </div>
             <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
                 <p class="product-brand">Apple</p>
                 <label class="product-name">iPhone 16 pro max</label>
                 <label class="product-desc">Build For Apple Intelligence</label>
@@ -124,7 +124,7 @@
                 <p class="product-price">Full Price: $1,099.00</p>
             </div>
             <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
                 <p class="product-brand">Apple</p>
                 <label class="product-name">iPhone 16 pro max</label>
                 <label class="product-desc">Build For Apple Intelligence</label>
@@ -133,7 +133,7 @@
                 <p class="product-price">Full Price: $1,099.00</p>
             </div>
             <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
                 <p class="product-brand">Apple</p>
                 <label class="product-name">iPhone 16 pro max</label>
                 <label class="product-desc">Build For Apple Intelligence</label>
@@ -142,7 +142,7 @@
                 <p class="product-price">Full Price: $1,099.00</p>
             </div>
             <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
                 <p class="product-brand">Apple</p>
                 <label class="product-name">iPhone 16 pro max</label>
                 <label class="product-desc">Build For Apple Intelligence</label>
@@ -151,7 +151,7 @@
                 <p class="product-price">Full Price: $1,099.00</p>
             </div>
             <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
                 <p class="product-brand">Apple</p>
                 <label class="product-name">iPhone 16 pro max</label>
                 <label class="product-desc">Build For Apple Intelligence</label>
@@ -160,7 +160,7 @@
                 <p class="product-price">Full Price: $1,099.00</p>
             </div>
             <div class="product-card">
-                <img src="../../assets/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
+                <img src="../../assets/images/Apple-iPhone-16-Pro-hero-geo-240909_inline.jpg.large.jpg" alt="Samsung Galaxy S25 Ultra" class="product-image">
                 <p class="product-brand">Apple</p>
                 <label class="product-name">iPhone 16 pro max</label>
                 <label class="product-desc">Build For Apple Intelligence</label>
