--- a/frontend/pages/part 1/shop.html
+++ b/frontend/pages/part 1/shop.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../styles/styles.css">
+    <link rel="stylesheet" href="../../styles/shop.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Shop</title>
 </head>
 <body>
+    <div class="header">
+       
+        <div class="header-content">
+            <img src="../../../icon-nobg.png" alt="ALSHOPDZ" class="icon">
+            <div class="input">
+                <input type="text" id="search-field" placeholder="Search The Market">
+            </div>
+            <div class="header-buttons">
+                <button class="sign-in"><i class="fa-regular fa-user"></i>Sign in</button>
+            <button id="openSidebar" class="cart-button"><i class="fa fa-cart-shopping"></i>Cart</button>
+            </div>
+        </div>   
+        <hr class="divider">
+        <div class="nav-bar">
+            <div class="tab">HOME</div>
+            <div class="tab active">SHOP</div>
+            <div class="tab">CHECKOUT</div>
+        </div>
+        <hr class="divider">
+    </div>
     <div id="shop-ui" class="ui-section" style="display: block;">
         <h4>Category</h4>
         <div class="selection">
