--- a/frontend/part 1/pages/checkout.html
+++ b/frontend/part 1/pages/checkout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../styles/checkout.css">
+    <link rel="stylesheet" href="../styles/checkout.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
@@ -138,5 +138,6 @@
         </div>
      </div>
     
+    <script src="../scripts/checkout.js"></script>
 </body>
 </html>
