--- a/frontend/part 1/pages/product_details.html
+++ b/frontend/part 1/pages/product_details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../../styles/product_details.css">
+    <link rel="stylesheet" type="text/css" href="../styles/product_details.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>ALSHOPDZ</title>
 </head>
@@ -114,6 +114,6 @@
         </div>
     </div>
 
-    <script src="../../scripts/product_details.js"></script>
+    <script src="../scripts/product_details.js"></script>
 </body>
 </html>
